fix spacing of navbar quicks (icons)

--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -14,6 +14,8 @@
     align-items: center;
     stroke: var(--base);
     fill: var(--base);
+    margin-right: 15px;
+    gap: 15px;
 }
 
 #logo {
